syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.arister.proto";
option java_outer_classname = "CustomerProto";

package customer;

enum IdType {
  PASSPORT = 0;
  NATIONAL_ID = 1;
  DRIVING_LICENSE = 2;
}

enum CustomerStatus {
  ACTIVE = 0;
  INACTIVE = 1;
  BLOCKED = 2;
  CLOSED = 3;
}

message Customer {
  int64 id = 1;
  string customer_code = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  string date_of_birth = 7;
  string address = 8;
  IdType id_type = 9;
  string id_number = 10;
  bool kyc_verified = 11;
  CustomerStatus status = 12;
  int32 branch_id = 13;
  string created_at = 14;
}

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string date_of_birth = 5;
  string address = 6;
  IdType id_type = 7;
  string id_number = 8;
  int32 branch_id = 9;
}

message GetCustomerRequest {
  int64 id = 1;
}

message GetCustomerByCodeRequest {
  string customer_code = 1;
}

message UpdateCustomerRequest {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  CustomerStatus status = 7;
}

message DeleteCustomerRequest {
  int64 id = 1;
}

message ListCustomersRequest {
  int32 page = 1;
  int32 size = 2;
}

message CustomerResponse {
  bool success = 1;
  string message = 2;
  Customer customer = 3;
}

message DeleteCustomerResponse {
  bool success = 1;
  string message = 2;
}

message ListCustomersResponse {
  bool success = 1;
  string message = 2;
  repeated Customer customers = 3;
  int32 total_count = 4;
  int32 page = 5;
  int32 size = 6;
}

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CustomerResponse);
  rpc GetCustomer(GetCustomerRequest) returns (CustomerResponse);
  rpc GetCustomerByCode(GetCustomerByCodeRequest) returns (CustomerResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (CustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
}
